[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/placeholders/flower.png" type="Texture" id=1]
[ext_resource path="res://scripts/GrowingSprite.gd" type="Script" id=2]

[node name="GrowingSprite" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -8 )
texture = ExtResource( 1 )

[node name="GrowthTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="GrowthTimer" to="." method="_on_GrowthTimer_timeout"]
